[package]
name = "udis"
description = "A tiny local service discovery system"
homepage = "https://github.com/duncanrhamill/udis"
repository = "https://github.com/duncanrhamill/udis"
readme = "readme.md"
version = "0.1.0"
edition = "2021"
authors = ["Duncan R Hamill <duncanrhamill@googlemail.com>"]
license = "MIT"
licence-file = "LICENSE"
keywords = ["discovery", "multicast", "mdns"]

[dependencies]
log = "0.4.22"
socket2 = { version = "0.5.7", features = ["all"] }
thiserror = "1.0.63"
local-ip-address = "0.6.3"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["sync", "rt", "rt-multi-thread", "net", "macros", "time"], optional = true}

[dev-dependencies]
env_logger = "0.11.5"

[features]
tokio = ["dep:tokio"]